--- a/HiddenVilla_Server/HiddenVilla_Server.csproj
+++ b/HiddenVilla_Server/HiddenVilla_Server.csproj
@@ -7,5 +7,6 @@
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Pages\LearnBlazor\" />
+    <Folder Include="Pages\LearnBlazor\LearnBlazorComponent\" />
   </ItemGroup>
 </Project>
